--- a/code/main/templates/main.html
+++ b/code/main/templates/main.html
@@ -40,6 +40,7 @@
             <header>
                 <h1><a href="https://youtu.be/rzlYXzL1QWU">Алгоритмы</a></h1>
             </header>
+            <h2 style="width: 100%; text-align: center;"><a href="/tasks/">Лучший ладдер кф ever created</a></h2>
             <div class="algoritmhs">
                 <ul>
                     {% for el in topics %}
