--- a/code/main/templates/tasks.html
+++ b/code/main/templates/tasks.html
@@ -137,10 +137,10 @@
 
     <form method="POST">
         {%csrf_token%}
-        <button type="submit" name="cnt">Сортануть всеросников по количеству задач</button>
-        <button type="submit" name="dif">Сортануть всеросников по средней сложности решенных</button>
-        <button type="submit" name="tdif">Сортануть таски по сложности</button>
-        <button type="submit" name="tcnt">Сортануть таски по количеству решивших</button>
+        <button type="submit" name="1">Сортануть всеросников по количеству задач и таски по сложности</button><br>
+        <button type="submit" name="2">Сортануть всеросников по средней сложности решенных и таски по сложности</button><br>
+        <button type="submit" name="3">Сортануть всеросников по количеству задач и таски по количеству решивших</button><br>
+        <button type="submit" name="4">Сортануть всеросников по средней сложности решенных и таски по количеству решивших</button>
     </form>
     <!-- <div class="block">
         <div class="ver" id="ac">+</div>
